Modernize collection instances by replacing (for example) `Collections.emptyList()` of Java 5 by the new `List.of()` introduced in Java 9. Contrarily to the old collection instances, the new ones intentionally throw `NullPointerException` if a null value is given to a method. Whether this is desired for the default methods of the main interfaces is subject to debate. But this is desired at least for the tests, because it allows to detect errors faster. This commit performs the replacement only in the tests and in the examples.